fix-wrap-menu

--- a/css/style.css
+++ b/css/style.css
@@ -201,10 +201,11 @@ body{
     list-style: none;
     justify-content: center;
     padding-bottom: 50px;
+    flex-wrap: wrap;
 }
 
 .main-wrapper main .main-nav ul li{
-    padding: 0 10px;
+    padding: 2px 10px;
     text-transform: uppercase;
     font-weight: bold;
     font-size: 0.8rem;
